<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6A8846"
    tools:context=".activities.PetsDetalle">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btFlotante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="40dp"
            app:srcCompat="@android:drawable/ic_delete"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#6A8846"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNombreMostrado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nombre"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/ivImg"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvNombreCientMascotaEtiq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lbNomNomCie"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvNombreCientMostrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prueba"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvClaseEtiqueta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lbClase"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvClaseMostrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prueba"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPelajeEtiqueta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lbPel"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPelajeMostrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prueba"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLinkEtiqueta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lbLink"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvLinkMostrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prueba"
            android:textColorHighlight="#24348E"
            android:textColorLink="#2C3D9F"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAmorosidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/amorosidad"
            android:textSize="20sp" />

        <RatingBar
            android:id="@+id/rbAmorosidadMostrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:isIndicator="true" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>