<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="src_in"
    android:background="@drawable/fondoprincipal"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btVerPets"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#2B2F33"
        android:fontFamily="sans-serif"
        android:text="@string/lbVer"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btAddPet" />

    <Button
        android:id="@+id/btAddPet"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#2B2F33"
        android:fontFamily="sans-serif"
        android:text="@string/lbAdd"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:longClickable="true"
        android:onClick="popupInfo"
        android:text="@string/prm"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="390dp"
        android:layout_height="624dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="popupInfo"
        android:text="@string/datosApp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>